# Kalorite

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.MD  assets.qrc  com.monsler.Kalorite.json  crimson.qss  io.github.monsler.Kalorite.json  kalorite.desktop  resources.qrc  testflatpak.sh
.github/workflows/: macos.yml
crates/audio-backend-rodio/: Cargo.toml
crates/audio-backend-rodio/src/: lib.rs
crates/audio-engine/: Cargo.toml
crates/audio-engine/src/: lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
data/: com.monsler.Kalorite.desktop  io.github.monsler.Kalorite.appdata.xml
docs/: plugin-api.md
docs/plugins/: spotify_downloader.lua
include/: AudioSpectrumAnalyzer.hpp  CddaSource.hpp  LuaApi.hpp  MainWindow.hpp  Mixer.hpp  PatternVisualizer.hpp  PlasmaPercent.hpp  PluginManager.hpp  SongDownloader.hpp  VolumeSignalWidget.hpp  WinampDisplay.hpp
languages/: kalorite_en.ts  kalorite_ru.ts
locale/: en.po  ru.po
locale/en/LC_MESSAGES/: kalorite.mo
locale/ru/LC_MESSAGES/: kalorite.mo
repo/: summary  summary.idx
repo/refs/heads/app/com.monsler.Kalorite/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/runtime/com.monsler.Kalorite.Debug/x86_64/: master
repo/summaries/: 6936130b8e496d4c4669ca7d673f4a41ee4c8d6d6b37cded6a7b72d58cb984e9-8ee89c82ceb636b33b6d7b69a59bc284ff2da8b54bfbd672b08a6ff4b82d6925.delta
src/: CddaSource.cpp  LuaApi.cpp  MainWindow.cpp  Mixer.cpp  PatternVisualizer.cpp  PlasmaPercent.cpp  PluginManager.cpp  SongDownloader.cpp  VolumeSignalWidget.cpp  WinampDisplay.cpp  main.cpp  main.rs  main_window.rs  player.rs
